# ai-orchestrator

./: .clineignore  .clinerules  .gitignore  .gitleaksignore  .markdownlint-cli2.jsonc  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IDE_AGENT_RULES.md  LICENSE  README.md  call_ollama.sh  exo-config.json  headroom_memory.db  install.sh  llm-config.json  local-commit.sh  mcp-config.json  package-lock.json  package.json  pr-checkmate.json  pyproject.toml  settings.json  tsconfig.json
.claude/: settings.json  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
agents/: api-tester.md  architect.md  coder.md  commit.md  context-manager.md  debugger.md  devops.md  doc-writer.md  error-coordinator.md  performance-monitor.md  planner.md  qa-orchestrator.md  quick-coder.md  researcher.md  reviewer.md  security-auditor.md  test-agent.md  triage-ts.md  ui-designer.md  ui-tester.md  unit-tester.md
commands/: create-bug.md  create-story.md  handoff.md  learn.md  standards.md  stats.md
documentation/: AGENTS.md  ARCHITECTURE.md  BITBUCKET_INTEGRATION.md  CLAUDE.md  CLUSTER.md  IDE_AGENT_RULES.md  PLUGINS.md  SKILLS.md  ai_rules.md
graphify-out/: .graphify_analysis.json  .graphify_extract.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
knowledge/: context-index.md  embeddings.jsonl  memory.jsonl  outcomes.jsonl  project-snapshot.md
scripts/: analyze_hardware.sh  analyze_project.sh  analyze_soft.sh  bitbucket-review.js  bump-version.sh  call_ollama.sh  capture-outcome.sh  check-update.sh  ci-debugger.js  embed-outcomes.sh  install.sh  (+14 more)
(+193 files in other folders)
